--- a/admin/admin-register.html
+++ b/admin/admin-register.html
@@ -101,28 +101,28 @@
                 method="POST"
               >
                 <div class="mb-3">
-                  <label for="username" class="form-label">Username</label>
+                  <label for="username" class="form-label">Admin Username</label>
                   <input
                     type="text"
                     class="form-control"
                     id="username"
                     name="username"
-                    placeholder="Enter your username"
+                    placeholder="Enter your Admin Username"
                     autofocus
                   />
                 </div>
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
+                  <label for="email" class="form-label">Admin Email</label>
                   <input
                     type="text"
                     class="form-control"
                     id="email"
                     name="email"
-                    placeholder="Enter your email"
+                    placeholder="Enter your Admin Email"
                   />
                 </div>
                 <div class="mb-3 form-password-toggle">
-                  <label class="form-label" for="password">Password</label>
+                  <label class="form-label" for="password">Admin Password</label>
                   <div class="input-group input-group-merge">
                     <input
                       type="password"
