--- a/admin/admiin-fess-report.html
+++ b/admin/admiin-fess-report.html
@@ -260,7 +260,7 @@
                 <div data-i18n="Students">Students</div>
               </a>
               <ul class="menu-sub">
-                <li class="menu-item active">
+                <li class="menu-item">
                   <a href="admin-students.html" class="menu-link">
                     <div data-i18n="All Students">All Students</div>
                   </a>
@@ -270,7 +270,7 @@
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
                   </a>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item active">
                   <a href="admiin-fess-report.html" class="menu-link">
                     <div data-i18n="Fess Report">Fess Report</div>
                   </a>
@@ -369,7 +369,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="admin-profile.html">
+                      <a class="dropdown-item" href="#">
                         <i class="bx bx-user me-2"></i>
                         <span class="align-middle">My Profile</span>
                       </a>
@@ -403,11 +403,9 @@
                     <div class="d-flex align-items-end row">
                       <div class="col-sm-7">
                         <div class="card-body">
-                          <h5 class="card-title text-primary">
-                            List of Capters !
-                          </h5>
+                          <h5 class="card-title text-primary">Fees Report !</h5>
                           <p class="mb-4">
-                            You can <strong>add/ edit/ delete</strong> chapters
+                            You can <strong>see</strong> the fees report
                           </p>
                         </div>
                       </div>
@@ -426,7 +424,7 @@
                       <!-- Student Search Filter -->
                       <div class="col-lg-12 mb-4">
                         <form action="">
-                          <div class="input-group">
+                          <div class="input-group mb-4">
                             <label for="" class="input-group-text">
                               Choose Class</label
                             >
@@ -437,7 +435,21 @@
                               <option value="4">Class 4</option>
                               <option value="5">Class 5</option>
                             </select>
+                          </div>
 
+                          <div class="input-group mb-4">
+                            <label for="" class="input-group-text">
+                              From Date</label
+                            >
+                            <input type="date" class="form-control" />
+                            &nbsp;&nbsp;&nbsp;
+                            <label for="" class="input-group-text">
+                              To Date</label
+                            >
+                            <input type="date" class="form-control" />
+                          </div>
+
+                          <div class="d-flex justify-content-end">
                             <button class="btn btn-primary">Search</button>
                             &nbsp;&nbsp;
                             <button class="btn btn-info">Export</button>
@@ -453,12 +465,12 @@
                                 <th>SL</th>
                                 <th>Profile</th>
                                 <th>STU ID</th>
-                                <th>Student Name</th>
-                                <th>Student Age</th>
-                                <th>Class Name</th>
                                 <th>Parent's Name</th>
-                                <th>Email</th>
-                                <th>Mobile</th>
+                                <th>Student's Name</th>
+                                <th>Class Name</th>
+                                <th>Email/Mobile</th>
+                                <th>Fees/ Date</th>
+                                <th>Status</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -479,19 +491,18 @@
                                   >
                                 </td>
                                 <td>Xyz Mnp</td>
+                                <td>Mnp</td>
                                 <td>
                                   <span class="badge bg-label-primary"
-                                    >Age: 8</span
-                                  >
-                                </td>
-                                <td>
-                                  <span class="badge bg-label-warning"
                                     >Class 8</span
                                   >
                                 </td>
-                                <td>MNP</td>
-                                <td>xyz@gmail.com</td>
-                                <td>+91-123456789</td>
+                                <td>
+                                  <p class="m-0 p-0"><i class='bx  bx-envelope'  ></i> xyz@gmail.com</p>
+                                  <p><i class='bx  bx-phone'  ></i> +91-123456789</p>
+                                </td>
+                                <td>89.00</td>
+                                <td><span class="badge bg-label-success">Paid</span></td>
 
                                 <td>
                                   <button
