--- a/admin/admin-enquiry.html
+++ b/admin/admin-enquiry.html
@@ -152,12 +152,12 @@
 
             <!-- Pages -->
             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text">Pages</span>
+              <span class="menu-header-text">SEO</span>
             </li>
             <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Page Contents">Page Contents</div>
+                <div data-i18n="Page SEO">Page SEO</div>
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
@@ -193,7 +193,29 @@
                     <div data-i18n="Privacy Policy">Privacy Policy</div>
                   </a>
                 </li>
+              </ul>
+            </li>
 
+            <!-- Pages Content -->
+            <li class="menu-header small text-uppercase">
+              <span class="menu-header-text">Page Content</span>
+            </li>
+            <li class="menu-item">
+              <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons bx bx-dock-top"></i>
+                <div data-i18n="Content">Content</div>
+              </a>
+              <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="admin-upload-faculties.html" class="menu-link">
+                    <div data-i18n="Faculties">Faculties</div>
+                  </a>
+                </li>
+                <li class="menu-item">
+                  <a href="admin-stories.html" class="menu-link">
+                    <div data-i18n="Stories">Stories</div>
+                  </a>
+                </li>
                 <li class="menu-item">
                   <a href="admin-faq.html" class="menu-link">
                     <div data-i18n="FAQ">FAQ</div>
@@ -496,7 +518,6 @@
                                 </td>
 
                                 <td>
-                                  
                                   <button
                                     class="btn btn-danger"
                                     type="button"
