--- a/admin/admiin-fess-report.html
+++ b/admin/admiin-fess-report.html
@@ -150,14 +150,14 @@
               </a>
             </li>
 
-            <!-- Pages -->
+            <!-- SEO Pages -->
             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text">Pages</span>
+              <span class="menu-header-text">SEO</span>
             </li>
             <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Page Contents">Page Contents</div>
+                <div data-i18n="Page SEO">Page SEO</div>
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
@@ -194,6 +194,30 @@
                   </a>
                 </li>
 
+                
+              </ul>
+            </li>
+
+            <!-- Pages Content -->
+            <li class="menu-header small text-uppercase">
+              <span class="menu-header-text">Page Content</span>
+            </li>
+            <li class="menu-item">
+              <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons bx bx-dock-top"></i>
+                <div data-i18n="Content">Content</div>
+              </a>
+              <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="admin-upload-faculties.html" class="menu-link">
+                    <div data-i18n="Faculties">Faculties</div>
+                  </a>
+                </li>
+                <li class="menu-item">
+                  <a href="admin-stories.html" class="menu-link">
+                    <div data-i18n="Stories">Stories</div>
+                  </a>
+                </li>
                 <li class="menu-item">
                   <a href="admin-faq.html" class="menu-link">
                     <div data-i18n="FAQ">FAQ</div>
@@ -498,11 +522,19 @@
                                   >
                                 </td>
                                 <td>
-                                  <p class="m-0 p-0"><i class='bx  bx-envelope'  ></i> xyz@gmail.com</p>
-                                  <p><i class='bx  bx-phone'  ></i> +91-123456789</p>
+                                  <p class="m-0 p-0">
+                                    <i class="bx bx-envelope"></i> xyz@gmail.com
+                                  </p>
+                                  <p>
+                                    <i class="bx bx-phone"></i> +91-123456789
+                                  </p>
                                 </td>
                                 <td>89.00</td>
-                                <td><span class="badge bg-label-success">Paid</span></td>
+                                <td>
+                                  <span class="badge bg-label-success"
+                                    >Paid</span
+                                  >
+                                </td>
 
                                 <td>
                                   <button
