--- a/admin/admiin-fess-report.html
+++ b/admin/admiin-fess-report.html
@@ -193,8 +193,6 @@
                     <div data-i18n="Privacy Policy">Privacy Policy</div>
                   </a>
                 </li>
-
-                
               </ul>
             </li>
 
@@ -213,6 +211,13 @@
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
                 </li>
+
+                <li class="menu-item">
+                  <a href="admin-story-tags.html" class="menu-link">
+                    <div data-i18n="Story Tags">Story Tags</div>
+                  </a>
+                </li>
+
                 <li class="menu-item">
                   <a href="admin-stories.html" class="menu-link">
                     <div data-i18n="Stories">Stories</div>
