--- a/admin/admin-students.html
+++ b/admin/admin-students.html
@@ -211,6 +211,12 @@
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
                 </li>
+
+                <li class="menu-item">
+                  <a href="admin-story-tags.html" class="menu-link">
+                    <div data-i18n="Story Tags">Story Tags</div>
+                  </a>
+                </li>
                 <li class="menu-item">
                   <a href="admin-stories.html" class="menu-link">
                     <div data-i18n="Stories">Stories</div>
@@ -570,6 +576,14 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
+                          >Profile Image</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
                           >Parent's Name</label
                         >
                         <input type="text" class="form-control" />
@@ -672,6 +686,23 @@
                     ></button>
                   </div>
                   <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <img
+                          src="./assets/img/avatars/1.png"
+                          class="w-px-100 h-auto rounded-circle"
+                          alt=""
+                        />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Profile Image</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
