--- a/admin/admin-upload-faculties.html
+++ b/admin/admin-upload-faculties.html
@@ -82,25 +82,30 @@
         align-items: center;
         justify-content: center;
         border-radius: 9999px;
-        background: #0d6efd; /* change color as you like */
+        background: #0d6efd;
+        /* change color as you like */
         color: #fff !important;
         box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15),
           0 6px 10px rgba(0, 0, 0, 0.08);
         text-decoration: none;
-        z-index: 1050; /* sits above most UI */
+        z-index: 1050;
+        /* sits above most UI */
         transition: transform 0.15s ease, box-shadow 0.15s ease,
           filter 0.15s ease;
       }
+
       .fab:hover {
         transform: translateY(-2px);
         box-shadow: 0 14px 30px rgba(0, 0, 0, 0.18),
           0 8px 14px rgba(0, 0, 0, 0.1);
         filter: brightness(1.05);
       }
+
       .fab:focus-visible {
         outline: 3px solid rgba(13, 110, 253, 0.45);
         outline-offset: 2px;
       }
+
       @media (prefers-reduced-motion: reduce) {
         .fab {
           transition: none;
@@ -200,13 +205,13 @@
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Page Content</span>
             </li>
-            <li class="menu-item">
+            <li class="menu-item active open">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div data-i18n="Content">Content</div>
               </a>
               <ul class="menu-sub">
-                <li class="menu-item">
+                <li class="menu-item active">
                   <a href="admin-upload-faculties.html" class="menu-link">
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
@@ -248,7 +253,7 @@
               </a>
             </li>
 
-            <li class="menu-item active">
+            <li class="menu-item">
               <a href="admin-subjects.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-crown"></i>
                 <div data-i18n="Subjects">Subjects</div>
@@ -396,7 +401,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="admin-profile.html">
                         <i class="bx bx-user me-2"></i>
                         <span class="align-middle">My Profile</span>
                       </a>
@@ -431,10 +436,10 @@
                       <div class="col-sm-7">
                         <div class="card-body">
                           <h5 class="card-title text-primary">
-                            List of Subjects !
+                            List of Faculties !
                           </h5>
                           <p class="mb-4">
-                            You can <strong>add/ edit/ delete</strong> subjects
+                            You can <strong>add/ edit/ delete</strong> faculties
                           </p>
                         </div>
                       </div>
@@ -449,14 +454,20 @@
                           />
                         </div>
                       </div>
+
                       <div class="col-lg-12">
                         <div class="table-responsive text-nowrap">
                           <table class="table table-hover table-bordered">
                             <thead>
                               <tr>
                                 <th>SL</th>
-                                <th>Class Names</th>
-                                <th>Subjects</th>
+                                <th>Profile</th>
+                                <th>FAC ID</th>
+                                <th>Faculty Name</th>
+                                <th>Asigned Classes</th>
+                                <th>Email</th>
+                                <th>Mobile</th>
+                                <th>About Faculty</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -465,8 +476,41 @@
                                 <td>
                                   <strong>1</strong>
                                 </td>
-                                <td>Class 5</td>
-                                <td>Bengali</td>
+                                <td>
+                                  <img
+                                    src="./assets/img/avatars/1.png"
+                                    class="w-px-40 h-auto rounded-circle"
+                                  />
+                                </td>
+                                <td>
+                                  <span class="badge bg-label-danger"
+                                    >25-SW-FAC-01</span
+                                  >
+                                </td>
+                                <td>Xyz Mnp</td>
+                                <td>
+                                  <span class="badge bg-label-primary"
+                                    >Class 5</span
+                                  >
+                                  <span class="badge bg-label-primary"
+                                    >Class 6</span
+                                  >
+                                  <span class="badge bg-label-primary"
+                                    >Class 8</span
+                                  >
+                                </td>
+                                <td>xyz@gmail.com</td>
+                                <td>+91-123456789</td>
+                                <td>
+                                  <button
+                                    type="button"
+                                    class="btn btn-info"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#backDropModalAbout"
+                                  >
+                                    About
+                                  </button>
+                                </td>
 
                                 <td>
                                   <button
@@ -499,18 +543,65 @@
             </div>
             <!-- / Content -->
 
-            <!-- Add Subject Modal -->
+            <!-- About Faculty Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalAbout"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      About Faculty
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <p>
+                          <strong
+                            >Faculty Name: XYZ | FAC ID: 25-SW-FAC-01</strong
+                          >
+                          <br />
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Quisquam, quae?
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Add Faculty Modal -->
             <div
               class="modal fade"
               id="backDropModalAddClass"
               data-bs-backdrop="static"
               tabindex="-1"
             >
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-lg">
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Add Subject
+                      Add Faculty
                     </h5>
                     <button
                       type="button"
@@ -523,24 +614,84 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Choose Class</label
+                          >Faculty Name</label
                         >
-                        <select name="" id="" class="form-select">
-                          <option value="1">Class 1</option>
-                          <option value="2">Class 2</option>
-                          <option value="3">Class 3</option>
-                          <option value="4">Class 4</option>
-                          <option value="5">Class 5</option>
-                        </select>
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Asign Classes</label
+                        >
+                        <br />
+                        <div>
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+                        </div>
                       </div>
                     </div>
 
-                    <div class="row g-2">
+                    <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Subject Name</label
+                          >Email ID</label
                         >
                         <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Mobile</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Profile Image</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >About Faculty</label
+                        >
+                        <textarea
+                          name=""
+                          id=""
+                          class="form-control"
+                          rows="5"
+                        ></textarea>
                       </div>
                     </div>
                   </div>
@@ -558,18 +709,18 @@
               </div>
             </div>
 
-            <!-- Edit Subject Modal -->
+            <!-- Edit Faculty Modal -->
             <div
               class="modal fade"
               id="backDropModalEditClass"
               data-bs-backdrop="static"
               tabindex="-1"
             >
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-lg">
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Edit Subject
+                      Edit Faculty
                     </h5>
                     <button
                       type="button"
@@ -581,25 +732,95 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <label for="nameBackdrop" class="form-label"
-                          >Choose Class</label
-                        >
-                        <select name="" id="" class="form-select">
-                          <option value="1">Class 1</option>
-                          <option value="2">Class 2</option>
-                          <option value="3">Class 3</option>
-                          <option value="4">Class 4</option>
-                          <option value="5">Class 5</option>
-                        </select>
+                        <img
+                          src="./assets/img/avatars/1.png"
+                          class="w-px-100 h-auto rounded-circle"
+                          alt=""
+                        />
                       </div>
                     </div>
 
-                    <div class="row g-2">
+                    <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Subject Name</label
+                          >Faculty Name</label
                         >
                         <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Asign Classes</label
+                        >
+                        <br />
+                        <div>
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+
+                          <p
+                            class="d-flex justify-content-start align-items-center m-0 p-0"
+                          >
+                            <span>Class 1</span> &nbsp;
+                            <input type="checkbox" class="form-check" />
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Email ID</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Mobile</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Profile Image</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >About Faculty</label
+                        >
+                        <textarea
+                          name=""
+                          id=""
+                          class="form-control"
+                          rows="5"
+                        ></textarea>
                       </div>
                     </div>
                   </div>
@@ -617,7 +838,7 @@
               </div>
             </div>
 
-            <!-- Delete Subject Modal -->
+            <!-- Delete Faculty Modal -->
             <div
               class="modal fade"
               id="backDropModalDeleteClass"
@@ -628,7 +849,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Delete Subject
+                      Delete Student
                     </h5>
                     <button
                       type="button"
@@ -640,7 +861,10 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>Are you sure you want to delete this Subject?</p>
+                        <p>
+                          Are you sure you want to delete this Faculty
+                          <span class="text-danger">25-SW-FAC-01</span>?
+                        </p>
                       </div>
                     </div>
                   </div>
