--- a/admin/admin-video-feedbacks.html
+++ b/admin/admin-video-feedbacks.html
@@ -212,6 +212,11 @@
                   </a>
                 </li>
                 <li class="menu-item">
+                  <a href="admin-story-tags.html" class="menu-link">
+                    <div data-i18n="Story Tags">Story Tags</div>
+                  </a>
+                </li>
+                <li class="menu-item">
                   <a href="admin-stories.html" class="menu-link">
                     <div data-i18n="Stories">Stories</div>
                   </a>
